--- a/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/VerEvento.cshtml
@@ -258,6 +258,12 @@
                                                             <button type="submit" name="boton" value="reservar" class="btn btn-primary"><span class="fa fa-book"></span> Reservar</button>
                                                         </center>
                                                     }
+                                                    else
+                                                    {
+                                                        <center class="col-md-12 col-sm-12">
+                                                            <button type="submit" name="boton" value="registro" class="btn btn-primary"><span class="fa fa-book"></span> Reservar</button>
+                                                        </center>
+                                                    }
 
                                                 }
                                                 if (codperfilActual >= 3)//para el promotor
