--- a/WebApplication4/WebApplication4/Views/Organizador/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Organizador/Edit.cshtml
@@ -23,8 +23,8 @@
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
-            <li class="active"><a href="@Url.Action("Index","Organizador")"> Mantenimiento de organizadores</a></li>
-            <li>Editar Organizador</li>
+            <li><a href="@Url.Action("Index","Organizador")"> Mantenimiento de organizadores</a></li>
+            <li class="active">Editar Organizador</li>
         </ol>
     </div>
 </div>
